Fix(UI): Added back checkbox for more visibility and IE8 support

--- a/app/styles/maker/product/show/_label.scss
+++ b/app/styles/maker/product/show/_label.scss
@@ -100,7 +100,7 @@
         .checkbox {
             label {
                 input[type="checkbox"] {
-                    display: none;
+                    // display: none;
                 }
             }
         }
